--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.508.0",
     "next": "15.3.2",
+    "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
